[tool.poetry]
name = "rltutor"
version = "0.1.0"
description = ""
authors = ["Yoshiki Kubotani"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
gym = "^0.18.0"
matplotlib = "^3.3.4"
numpy = "^1.20.1"
pandas = "^1.2.1"
pfrl = "^0.2.1"
scikit-learn = "^0.24.1"
scipy = "^1.6.0"
torch = "1.8.1"
hydra-core = "^1.1.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.7.0"
flake8 = "^3.8.4"
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
